--- a/src/test/kotlin/org/wfanet/measurement/integration/k8s/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/integration/k8s/BUILD.bazel
@@ -125,6 +125,7 @@ java_test(
     tags = [
         "cpu:8",
         "manual",
+        "no-remote-exec",
     ],
     test_class = "org.wfanet.measurement.integration.k8s.EmptyClusterCorrectnessTest",
     runtime_deps = [":empty_cluster_correctness_test"],
@@ -140,6 +141,7 @@ java_test(
         "exclusive",
         "external",
         "manual",
+        "no-remote-exec",
     ],
     test_class = "org.wfanet.measurement.integration.k8s.SyntheticGeneratorCorrectnessTest",
     runtime_deps = [":synthetic_data_generator_correctness_test"],
@@ -156,6 +158,7 @@ java_test(
         "exclusive",
         "external",
         "manual",
+        "no-remote-exec",
     ],
     test_class = "org.wfanet.measurement.integration.k8s.BigQueryCorrectnessTest",
     runtime_deps = [":bigquery_correctness_test"],
