--- a/src/test/kotlin/org/wfanet/measurement/duchy/deploy/common/postgres/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/duchy/deploy/common/postgres/BUILD.bazel
@@ -3,6 +3,9 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
 kt_jvm_test(
     name = "DuchySchemaTest",
     srcs = ["DuchySchemaTest.kt"],
+    tags = [
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.duchy.deploy.common.postgres.DuchySchemaTest",
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/postgres/testing",
@@ -15,6 +18,9 @@ kt_jvm_test(
 kt_jvm_test(
     name = "PostgresContinuationTokensServiceTest",
     srcs = ["PostgresContinuationTokensServiceTest.kt"],
+    tags = [
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.duchy.deploy.common.postgres.PostgresContinuationTokensServiceTest",
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/postgres:services",
@@ -29,6 +35,9 @@ kt_jvm_test(
 kt_jvm_test(
     name = "PostgresComputationStatsServiceTest",
     srcs = ["PostgresComputationStatsServiceTest.kt"],
+    tags = [
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.duchy.deploy.common.postgres.PostgresComputationStatsServiceTest",
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/duchy/db/computation/testing",
@@ -46,6 +55,9 @@ kt_jvm_test(
 kt_jvm_test(
     name = "PostgresComputationsServiceTest",
     srcs = ["PostgresComputationsServiceTest.kt"],
+    tags = [
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.duchy.deploy.common.postgres.PostgresComputationsServiceTest",
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/duchy/db/computation/testing",
