--- a/src/test/kotlin/org/wfanet/measurement/eventdataprovider/privacybudgetmanagement/deploy/common/postgres/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/eventdataprovider/privacybudgetmanagement/deploy/common/postgres/BUILD.bazel
@@ -5,6 +5,9 @@ kt_jvm_test(
     srcs = [
         "PrivacyBudgetPostgresSchemaTest.kt",
     ],
+    tags = [
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.eventdataprovider.privacybudgetmanagement.deploy.common.postgres.PrivacyBudgetPostgresSchemaTest",
     runtime_deps = ["@wfa_common_jvm//imports/java/org/postgresql:j2dbc"],
     deps = [
@@ -19,6 +22,9 @@ kt_jvm_test(
 kt_jvm_test(
     name = "PostgresBackingStoreTest",
     srcs = ["PostgresBackingStoreTest.kt"],
+    tags = [
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.eventdataprovider.privacybudgetmanagement.deploy.common.postgres.PostgresBackingStoreTest",
     runtime_deps = [
         "@wfa_common_jvm//imports/java/org/postgresql:j2dbc",
