--- a/src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres/BUILD.bazel
@@ -5,7 +5,10 @@ kt_jvm_test(
     srcs = ["PostgresMeasurementConsumersServiceTest.kt"],
     # TODO(world-federation-of-advertisers/cross-media-measurement#827): Remove when flakiness is resolved.
     flaky = True,
-    tags = ["cpu:2"],
+    tags = [
+        "cpu:2",
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.reporting.deploy.v2.postgres.PostgresMeasurementConsumersServiceTest",
     runtime_deps = [
         "@wfa_common_jvm//imports/java/org/yaml:snakeyaml",
@@ -23,7 +26,10 @@ kt_jvm_test(
     srcs = ["PostgresMeasurementsServiceTest.kt"],
     # TODO(world-federation-of-advertisers/cross-media-measurement#827): Remove when flakiness is resolved.
     flaky = True,
-    tags = ["cpu:2"],
+    tags = [
+        "cpu:2",
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.reporting.deploy.v2.postgres.PostgresMeasurementsServiceTest",
     runtime_deps = [
         "@wfa_common_jvm//imports/java/org/yaml:snakeyaml",
@@ -41,7 +47,10 @@ kt_jvm_test(
     srcs = ["PostgresMetricsServiceTest.kt"],
     # TODO(world-federation-of-advertisers/cross-media-measurement#827): Remove when flakiness is resolved.
     flaky = True,
-    tags = ["cpu:2"],
+    tags = [
+        "cpu:2",
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.reporting.deploy.v2.postgres.PostgresMetricsServiceTest",
     runtime_deps = [
         "@wfa_common_jvm//imports/java/org/yaml:snakeyaml",
@@ -59,7 +68,10 @@ kt_jvm_test(
     srcs = ["PostgresReportingSetsServiceTest.kt"],
     # TODO(world-federation-of-advertisers/cross-media-measurement#827): Remove when flakiness is resolved.
     flaky = True,
-    tags = ["cpu:2"],
+    tags = [
+        "cpu:2",
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.reporting.deploy.v2.postgres.PostgresReportingSetsServiceTest",
     runtime_deps = [
         "@wfa_common_jvm//imports/java/org/yaml:snakeyaml",
@@ -77,7 +89,10 @@ kt_jvm_test(
     srcs = ["PostgresReportsServiceTest.kt"],
     # TODO(world-federation-of-advertisers/cross-media-measurement#827): Remove when flakiness is resolved.
     flaky = True,
-    tags = ["cpu:2"],
+    tags = [
+        "cpu:2",
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.reporting.deploy.v2.postgres.PostgresReportsServiceTest",
     runtime_deps = [
         "@wfa_common_jvm//imports/java/org/yaml:snakeyaml",
@@ -95,7 +110,10 @@ kt_jvm_test(
     srcs = ["PostgresMetricCalculationSpecsServiceTest.kt"],
     # TODO(world-federation-of-advertisers/cross-media-measurement#827): Remove when flakiness is resolved.
     flaky = True,
-    tags = ["cpu:2"],
+    tags = [
+        "cpu:2",
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.reporting.deploy.v2.postgres.PostgresMetricCalculationSpecsServiceTest",
     runtime_deps = [
         "@wfa_common_jvm//imports/java/org/yaml:snakeyaml",
@@ -113,7 +131,10 @@ kt_jvm_test(
     srcs = ["PostgresReportSchedulesServiceTest.kt"],
     # TODO(world-federation-of-advertisers/cross-media-measurement#827): Remove when flakiness is resolved.
     flaky = True,
-    tags = ["cpu:2"],
+    tags = [
+        "cpu:2",
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.reporting.deploy.v2.postgres.PostgresReportSchedulesServiceTest",
     runtime_deps = [
         "@wfa_common_jvm//imports/java/org/yaml:snakeyaml",
@@ -131,7 +152,10 @@ kt_jvm_test(
     srcs = ["PostgresReportScheduleIterationsServiceTest.kt"],
     # TODO(world-federation-of-advertisers/cross-media-measurement#827): Remove when flakiness is resolved.
     flaky = True,
-    tags = ["cpu:2"],
+    tags = [
+        "cpu:2",
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.reporting.deploy.v2.postgres.PostgresReportScheduleIterationsServiceTest",
     runtime_deps = [
         "@wfa_common_jvm//imports/java/org/yaml:snakeyaml",
