--- a/src/main/kotlin/org/wfanet/measurement/kingdom/batch/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/kingdom/batch/BUILD.bazel
@@ -1,8 +1,10 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
 package(default_visibility = [
+    "//src/main/kotlin/org/wfanet/measurement/integration/common:__subpackages__",
     "//src/main/kotlin/org/wfanet/measurement/kingdom/batch/spanner:__subpackages__",
     "//src/main/kotlin/org/wfanet/measurement/kingdom/deploy/common:__subpackages__",
+    "//src/test/kotlin/org/wfanet/measurement/integration/deploy/gcloud:__subpackages__",
     "//src/test/kotlin/org/wfanet/measurement/kingdom/batch:__subpackages__",
 ])
 
