--- a/src/test/kotlin/org/wfanet/measurement/integration/deploy/gcloud/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/integration/deploy/gcloud/BUILD.bazel
@@ -126,18 +126,18 @@ java_test(
 )
 
 kt_jvm_library(
-    name = "in_process_measurement_system_prober_integration_test",
-    srcs = ["InProcessMeasurementSystemProberIntegrationTest.kt"],
-    runtime_deps = [
-    ],
+    name = "gcloud_spanner_in_process_measurement_system_prober_integration_test",
+    srcs = ["GCloudSpannerInProcessMeasurementSystemProberIntegrationTest.kt"],
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/postgres/testing",
         "//src/main/kotlin/org/wfanet/measurement/integration/common:in_process_cmms_components",
         "//src/main/kotlin/org/wfanet/measurement/integration/common:in_process_duchy",
+        "//src/main/kotlin/org/wfanet/measurement/integration/common:in_process_measurement_system_prober_integration_test",
         "//src/main/kotlin/org/wfanet/measurement/integration/common/reporting/v2:in_process_life_of_a_report_integration_test",
         "//src/main/kotlin/org/wfanet/measurement/integration/deploy/common/postgres:postgres_duchy_dependency_provider_rule",
         "//src/main/kotlin/org/wfanet/measurement/integration/deploy/gcloud:kingdom_data_services_provider_rule",
-        "//src/main/kotlin/org/wfanet/measurement/kingdom/batch",
+        "//src/main/kotlin/org/wfanet/measurement/integration/deploy/gcloud:spanner_duchy_dependency_provider_rule",
+        "//src/main/kotlin/org/wfanet/measurement/kingdom/batch:measurement_system_prober",
         "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/server/postgres:services",
         "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres/testing",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/db/r2dbc/postgres/testing:database_provider",
@@ -146,8 +146,8 @@ kt_jvm_library(
 )
 
 java_test(
-    name = "InProcessMeasurementSystemProberIntegrationTest",
+    name = "GCloudSpannerInProcessMeasurementSystemProberIntegrationTest",
     size = "large",
-    test_class = "org.wfanet.measurement.integration.deploy.gcloud.InProcessMeasurementSystemProberIntegrationTest",
-    runtime_deps = [":in_process_measurement_system_prober_integration_test"],
+    test_class = "org.wfanet.measurement.integration.deploy.gcloud.GCloudSpannerInProcessMeasurementSystemProberIntegrationTest",
+    runtime_deps = [":gcloud_spanner_in_process_measurement_system_prober_integration_test"],
 )
