--- a/.github/workflows/scan-images.yml
+++ b/.github/workflows/scan-images.yml
@@ -85,6 +85,7 @@ jobs:
           - duchy/aws-requisition-fulfillment
           - duchy/aws-postgres-internal-server
           - panel-exchange/forwarded-storage-daemon
+          - kingdom/measurement-system-prober
     steps:
       - name: Get SARIF file path
         id: get-sarif-file-path
