--- a/src/main/kotlin/org/wfanet/measurement/kingdom/service/api/v2alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/kingdom/service/api/v2alpha/BUILD.bazel
@@ -8,6 +8,7 @@ package(default_visibility = [
     "//src/main/kotlin/org/wfanet/measurement/kingdom/service/api/v2alpha/testing:__pkg__",
     "//src/main/kotlin/org/wfanet/measurement/loadtest/panelmatch:__pkg__",
     "//src/main/kotlin/org/wfanet/measurement/loadtest/panelmatchresourcesetup:__pkg__",
+    "//src/main/kotlin/org/wfanet/measurement/loadtest/reporting:__pkg__",
     "//src/main/kotlin/org/wfanet/measurement/loadtest/resourcesetup:__pkg__",
     "//src/test/kotlin/org/wfanet/measurement/integration/common:__pkg__",
 ])
