--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/vidlabeling/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/vidlabeling/BUILD.bazel
@@ -6,8 +6,8 @@ package(
 )
 
 kt_jvm_library(
-    name = "vid_labeler",
-    srcs = ["VidLabeler.kt"],
+    name = "vid_labeler_app",
+    srcs = ["VidLabelerApp.kt"],
     deps = [
         "//src/main/proto/wfa/measurement/securecomputation:cmm_work_kt_jvm_proto",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/teesdk:base_tee_application",
