--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -99,7 +99,20 @@ jobs:
 
       - name: Run tests
         id: run-tests
-        run: bazel test //...
+        run: bazel test -- //... -//src/test/python/...
+
+      - name: Run tests with coverage
+        id: run-coverage
+        run: bazel coverage --experimental_split_coverage_postprocessing --experimental_fetch_all_coverage_outputs --remote_download_outputs=all --strategy=CoverageReport=local --combined_report=lcov --instrumentation_filter="//src/main/python/.*,-@.*" //src/test/python/...
+
+      - name: Export bazel output path
+        run: echo "BAZEL_OUTPUT_PATH=$(bazel info output_path)" >> $GITHUB_ENV
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: ${{ env.BAZEL_OUTPUT_PATH }}/_coverage/_coverage_report.dat
 
       - name: Create cluster
         id: create-cluster
@@ -149,4 +162,4 @@ jobs:
       - name: Upload Bazel testlogs
         continue-on-error: true
         uses: world-federation-of-advertisers/actions/bazel-upload-testlogs@v2
-        if: failure() && (steps.run-tests.outcome == 'failure' || steps.run-correctness-test.outcome == 'failure' || steps.run-panelmatch-correctness-test.outcome == 'failure')
+        if: failure() && (steps.run-tests.outcome == 'failure' || steps.run-coverage.outcome == 'failure' || steps.run-correctness-test.outcome == 'failure' || steps.run-panelmatch-correctness-test.outcome == 'failure')
