--- a/src/test/kotlin/org/wfanet/measurement/securecomputation/teeapps/utils/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/securecomputation/teeapps/utils/BUILD.bazel
@@ -7,6 +7,8 @@ kt_jvm_test(
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/teeapps/utils:TeeApplicationUtils",
         "//src/main/proto/wfa/measurement/api/v2alpha/event_templates/testing:test_event_kt_jvm_proto",
+        "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/org/junit",
+        "@wfa_virtual_people_common//src/main/proto/wfa/virtual_people/common:event_kt_jvm_proto",
     ],
 )
