--- a/src/main/kotlin/org/wfanet/measurement/reporting/service/internal/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/service/internal/BUILD.bazel
@@ -11,6 +11,7 @@ kt_jvm_library(
     name = "internal_exception",
     srcs = ["ReportingInternalException.kt"],
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/common/grpc:error_info",
         "//src/main/proto/google/rpc:error_details_kt_jvm_proto",
         "//src/main/proto/google/rpc:status_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/reporting:error_code_kt_jvm_proto",
