--- a/src/main/resources/reporting/postgres/changelog-v2.yaml
+++ b/src/main/resources/reporting/postgres/changelog-v2.yaml
@@ -58,3 +58,6 @@ databaseChangeLog:
 - include:
     file: recreate-metric-reuse-index.sql
     relativeToChangeLogFile: true
+- include:
+    file: add-campaign-group-to-reporting-sets.sql
+    relativeToChangeLogFile: true
